# hingy_package

./: CMakeLists.txt  Makefile
TORCSTester/: TORCSTester.sln
TORCSTester/TORCSTester/: Configuration.cs  Program.cs  Runner.cs  TORCSTester.csproj
configs/: best.xml
evolutionary_trainer/: Makefile  evolutionary_trainer.sln
evolutionary_trainer/evolutionary_trainer/: EvolutionaryTrainer.h  GeneRegulatoryNetwork.h  ParamsTrainer.cpp  ParamsTrainer.h  Randomizer.h  ReadMe.txt  evolutionary_trainer.vcxproj  evolutionary_trainer.vcxproj.filters  main.cpp  utils.cpp
hingybot/: Makefile  hingybot.sln
hingybot/hingybot/: GeneRegulatoryNetwork.h  car_io.h  driver.cpp  driver.h  hingy_math.cpp  hingy_math.h  hingy_track.cpp  hingy_track.h  hingybot.vcxproj  hingybot.vcxproj.filters  main.cpp  main.h  pid_controller.h  torcs_integration.cpp  torcs_integration.h  utils.cpp  utils.h
src/: EvolutionaryTrainer.h  GeneRegulatoryNetwork.h  Randomizer.h  car_io.h  driver.cpp  driver.h  hingy_math.cpp  hingy_math.h  hingy_track.cpp  hingy_track.h  main.cpp  main.h  pid_controller.h  torcs_integration.cpp  torcs_integration.h  utils.cpp  utils.h
src/configs.old/: #best.xml#  best.xml_-0.569592  best.xml_-128.944534  best.xml_-129.130676  best.xml_-149.349426  best.xml_-83.649910  best.xml_0.965138  best.xml_1.047093  best.xml_1.157255  best.xml_1.157496  best.xml_1.231838  best.xml_1.262712  best.xml_1.263549  best.xml_1.302320  best.xml_1.397024  best.xml_1.434764  best.xml_1.574422  best.xml_1.622158  best.xml_1.636158  best.xml_1.702096  best.xml_1.741922  best.xml_1.816727  best.xml_1.935295  best.xml_2.073289  best.xml_2.154255  best.xml_2.229187  best.xml_2.325898  best.xml_2.325944  (+135 more)
tracks/: emero.xml  schwang.xml  senhor.xml  zlovenovice.xml
(+69 files in other folders)
